# weather-movie_bot

./: Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
admin/: __init__.py  admin.py  admin_handler.py  admin_kb.py  admin_text.py  errors.py  handler.py  keyboard.py  state.py
bot/: main.py
bot/admin/: admin.py  handler.py  keyboard.py  state.py
bot/alembic/: env.py
bot/core/: config.py
bot/main_menu/: __init__.py  handler.py  keyboard.py  text.py
bot/meal/: handler.py  keyboard.py  text.py  utils.py
bot/movie/: handler.py  keyboard.py  state.py
bot/tools/: handler.py  keyboard.py
bot/weather/: handler.py  keyboard.py  state.py  text.py
core/: config.py
core/middlewares/: middleware.py
core/models/: __init__.py  db_helper.py
core/scheduler/: scheduled_events.py  settings.py
database/users/: crud.py
db/: db.py  models.py
events/: __init__.py  events.py  events_handler.py  events_kb.py  events_text.py
events/reactions/: handler.py
handlers/: handlers.py  handlers_kb.py  handlers_text.py
main_menu/: __init__.py  handler.py
meal/: handler.py  keyboard.py  meal_handler.py  meal_kb.py  meal_utils.py  utils.py
middleware/: throttlingmiddleware.py
movie/: __init__.py  keyboard.py  movie_handler.py  movie_kb.py  movie_text.py  movie_utils.py
settings/: apschedulermiddleware.py  settings_handler.py  settings_kb.py  states.py
tools/: __init__.py  keyboard.py
weather/: __init__.py  keyboard.py  main.py  text.py  weather_handler.py  weather_kb.py  weather_text.py  weather_utils.py
(+52 files in other folders)
