[tool.poetry]
name = "harper"
version = "2.0"
description = "My own telegram bot"
authors = ["Maksim Kozhin <a.zurnaaaa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.13.1"
aiohttp = "^3.10.5"
apscheduler = "^3.10.4"
apscheduler-di = "^0.1.0"
redis = "^5.0.8"
pydantic-settings = "^2.5.2"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
aiosqlite = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
